src/main/gen/com/dmgburg/alfa/psi/parser/AlfaParser.java
// This is a generated file. Not intended for manual editing.
package com.dmgburg.alfa.psi.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.dmgburg.alfa.psi.AlfaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AlfaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == SIGN) {
      r = Sign(b, 0);
    }
    else if (t == ADVICE_BODY) {
      r = adviceBody(b, 0);
    }
    else if (t == ADVICE_DECLARATION) {
      r = adviceDeclaration(b, 0);
    }
    else if (t == ADVICE_REF) {
      r = adviceRef(b, 0);
    }
    else if (t == ALGORITHM_NAME) {
      r = algorithmName(b, 0);
    }
    else if (t == ANY_ATOMIC_OR_BAG_TYPE) {
      r = anyAtomicOrBagType(b, 0);
    }
    else if (t == ANY_ATOMIC_TYPE) {
      r = anyAtomicType(b, 0);
    }
    else if (t == ATTRIBUTE_ASSIGN) {
      r = attributeAssign(b, 0);
    }
    else if (t == ATTRIBUTE_ASSIGN_BODY) {
      r = attributeAssignBody(b, 0);
    }
    else if (t == ATTRIBUTE_BODY) {
      r = attributeBody(b, 0);
    }
    else if (t == ATTRIBUTE_CATEGORY) {
      r = attributeCategory(b, 0);
    }
    else if (t == ATTRIBUTE_DECLARATION) {
      r = attributeDeclaration(b, 0);
    }
    else if (t == ATTRIBUTE_DESIGNATOR) {
      r = attributeDesignator(b, 0);
    }
    else if (t == ATTRIBUTE_DESIGNATOR_ISSUER) {
      r = attributeDesignatorIssuer(b, 0);
    }
    else if (t == ATTRIBUTE_DESIGNATOR_MUST_BE_PRESENT) {
      r = attributeDesignatorMustBePresent(b, 0);
    }
    else if (t == ATTRIBUTE_ID) {
      r = attributeId(b, 0);
    }
    else if (t == ATTRIBUTE_NAME) {
      r = attributeName(b, 0);
    }
    else if (t == ATTRIBUTE_REF) {
      r = attributeRef(b, 0);
    }
    else if (t == ATTRIBUTE_TYPE) {
      r = attributeType(b, 0);
    }
    else if (t == CATEGORY_DECLARATION) {
      r = categoryDeclaration(b, 0);
    }
    else if (t == CATEGORY_NAME) {
      r = categoryName(b, 0);
    }
    else if (t == CLAUSE_ADDIN) {
      r = clauseAddin(b, 0);
    }
    else if (t == CLAUSE_ENTRY) {
      r = clauseEntry(b, 0);
    }
    else if (t == CLAUSE_EXPRESSION) {
      r = clauseExpression(b, 0);
    }
    else if (t == CLAUSE_OPERAND) {
      r = clauseOperand(b, 0);
    }
    else if (t == CLAUSE_OPERATOR) {
      r = clauseOperator(b, 0);
    }
    else if (t == COMBINATION_ALGORITHM_REF) {
      r = combinationAlgorithmRef(b, 0);
    }
    else if (t == CONDITION_BODY) {
      r = conditionBody(b, 0);
    }
    else if (t == CONDITION_ENTRY) {
      r = conditionEntry(b, 0);
    }
    else if (t == CONSTANT) {
      r = constant(b, 0);
    }
    else if (t == DESCRIPTION) {
      r = description(b, 0);
    }
    else if (t == EFFECT) {
      r = effect(b, 0);
    }
    else if (t == EXPRESSION) {
      r = expression(b, 0);
    }
    else if (t == EXPRESSION_ADDIN) {
      r = expressionAddin(b, 0);
    }
    else if (t == EXPRESSIONS) {
      r = expressions(b, 0);
    }
    else if (t == FUNCTION_ARGUMENT) {
      r = functionArgument(b, 0);
    }
    else if (t == FUNCTION_BODY) {
      r = functionBody(b, 0);
    }
    else if (t == FUNCTION_BODY_ARGUMENT) {
      r = functionBodyArgument(b, 0);
    }
    else if (t == FUNCTION_BODY_RETURN) {
      r = functionBodyReturn(b, 0);
    }
    else if (t == FUNCTION_CLAUSE) {
      r = functionClause(b, 0);
    }
    else if (t == FUNCTION_CLAUSE_ARGUMENT) {
      r = functionClauseArgument(b, 0);
    }
    else if (t == FUNCTION_DECLARATION) {
      r = functionDeclaration(b, 0);
    }
    else if (t == FUNCTION_ENTRY) {
      r = functionEntry(b, 0);
    }
    else if (t == FUNCTION_NAME) {
      r = functionName(b, 0);
    }
    else if (t == FUNCTION_REF) {
      r = functionRef(b, 0);
    }
    else if (t == FUNCTION_REF_NAME) {
      r = functionRefName(b, 0);
    }
    else if (t == FUNCTION_TYPE) {
      r = functionType(b, 0);
    }
    else if (t == ID_DECLARATION) {
      r = idDeclaration(b, 0);
    }
    else if (t == IMPORT_DECLARATION) {
      r = importDeclaration(b, 0);
    }
    else if (t == IMPORT_EVERYTHING) {
      r = importEverything(b, 0);
    }
    else if (t == IMPORT_NAME) {
      r = importName(b, 0);
    }
    else if (t == INTEGER_LITERAL) {
      r = integerLiteral(b, 0);
    }
    else if (t == LEFT_CLAUSE_OPERAND) {
      r = leftClauseOperand(b, 0);
    }
    else if (t == NAMESPACE_BODY) {
      r = namespaceBody(b, 0);
    }
    else if (t == NAMESPACE_ENTRY) {
      r = namespaceEntry(b, 0);
    }
    else if (t == NAMESPACE_NAME) {
      r = namespaceName(b, 0);
    }
    else if (t == OBLIGATION_BODY) {
      r = obligationBody(b, 0);
    }
    else if (t == OBLIGATION_DECLARATION) {
      r = obligationDeclaration(b, 0);
    }
    else if (t == OBLIGATION_OR_ADVICE_BODY) {
      r = obligationOrAdviceBody(b, 0);
    }
    else if (t == OBLIGATION_REF) {
      r = obligationRef(b, 0);
    }
    else if (t == ON_EFFECT) {
      r = onEffect(b, 0);
    }
    else if (t == OPERAND) {
      r = operand(b, 0);
    }
    else if (t == OPERATOR) {
      r = operator(b, 0);
    }
    else if (t == OPERATOR_DECLARATION) {
      r = operatorDeclaration(b, 0);
    }
    else if (t == OPERATOR_DECLARATION_BODY) {
      r = operatorDeclarationBody(b, 0);
    }
    else if (t == OPERATOR_FEATURE) {
      r = operatorFeature(b, 0);
    }
    else if (t == OPERATOR_INVRESE) {
      r = operatorInvrese(b, 0);
    }
    else if (t == POLICY_BODY) {
      r = policyBody(b, 0);
    }
    else if (t == POLICY_COMBINATOR_DECLARATION) {
      r = policyCombinatorDeclaration(b, 0);
    }
    else if (t == POLICY_ENTRY) {
      r = policyEntry(b, 0);
    }
    else if (t == POLICY_NAME) {
      r = policyName(b, 0);
    }
    else if (t == POLICY_OR_POLICY_SET_REF) {
      r = policyOrPolicySetRef(b, 0);
    }
    else if (t == POLICY_SET_BODY) {
      r = policySetBody(b, 0);
    }
    else if (t == POLICY_SET_ENTRY) {
      r = policySetEntry(b, 0);
    }
    else if (t == POLICY_SET_NAME) {
      r = policySetName(b, 0);
    }
    else if (t == QUALIFIED_NAME) {
      r = qualifiedName(b, 0);
    }
    else if (t == REF) {
      r = ref(b, 0);
    }
    else if (t == RIGHT_CLAUSE_OPERAND) {
      r = rightClauseOperand(b, 0);
    }
    else if (t == RULE_BODY) {
      r = ruleBody(b, 0);
    }
    else if (t == RULE_BODY_ELEMENT) {
      r = ruleBodyElement(b, 0);
    }
    else if (t == RULE_COMBINATOR_DECLARATION) {
      r = ruleCombinatorDeclaration(b, 0);
    }
    else if (t == RULE_ENTRY) {
      r = ruleEntry(b, 0);
    }
    else if (t == RULE_NAME) {
      r = ruleName(b, 0);
    }
    else if (t == RULE_REF) {
      r = ruleRef(b, 0);
    }
    else if (t == SINGLE_CLAUSE_EXPRESSION) {
      r = singleClauseExpression(b, 0);
    }
    else if (t == TARGET_ENTRY) {
      r = targetEntry(b, 0);
    }
    else if (t == TYPE_BAG) {
      r = typeBag(b, 0);
    }
    else if (t == TYPE_DECLARATION) {
      r = typeDeclaration(b, 0);
    }
    else if (t == TYPE_NAME) {
      r = typeName(b, 0);
    }
    else if (t == TYPE_REF) {
      r = typeRef(b, 0);
    }
    else if (t == VARIABLE_ARGUMENTS) {
      r = variableArguments(b, 0);
    }
    else if (t == WRAPPED_EXPRESSIONS) {
      r = wrappedExpressions(b, 0);
    }
    else if (t == XACML_DECLARATION) {
      r = xacmlDeclaration(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return alfaFile(b, l + 1);
  }

  /* ********************************************************** */
  // '+'|'-'
  public static boolean Sign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Sign")) return false;
    if (!nextTokenIs(b, "<sign>", PLUS, MUNUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, SIGN, "<sign>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MUNUS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // advice adviceRef ('{' attributeAssignBody '}')?
  public static boolean adviceBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adviceBody")) return false;
    if (!nextTokenIs(b, ADVICE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ADVICE);
    r = r && adviceRef(b, l + 1);
    r = r && adviceBody_2(b, l + 1);
    exit_section_(b, m, ADVICE_BODY, r);
    return r;
  }

  // ('{' attributeAssignBody '}')?
  private static boolean adviceBody_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adviceBody_2")) return false;
    adviceBody_2_0(b, l + 1);
    return true;
  }

  // '{' attributeAssignBody '}'
  private static boolean adviceBody_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adviceBody_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CURVE1);
    r = r && attributeAssignBody(b, l + 1);
    r = r && consumeToken(b, CURVE2);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // advice idDeclaration
  public static boolean adviceDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adviceDeclaration")) return false;
    if (!nextTokenIs(b, ADVICE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ADVICE);
    r = r && idDeclaration(b, l + 1);
    exit_section_(b, m, ADVICE_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // ref
  public static boolean adviceRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adviceRef")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ref(b, l + 1);
    exit_section_(b, m, ADVICE_REF, r);
    return r;
  }

  /* ********************************************************** */
  // namespaceEntry+
  static boolean alfaFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alfaFile")) return false;
    if (!nextTokenIs(b, NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespaceEntry(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!namespaceEntry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alfaFile", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean algorithmName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "algorithmName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ALGORITHM_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // anyAtomicOrBag
  public static boolean anyAtomicOrBagType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anyAtomicOrBagType")) return false;
    if (!nextTokenIs(b, ANYATOMICORBAG)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANYATOMICORBAG);
    exit_section_(b, m, ANY_ATOMIC_OR_BAG_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // anyAtomic
  public static boolean anyAtomicType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anyAtomicType")) return false;
    if (!nextTokenIs(b, ANYATOMIC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANYATOMIC);
    exit_section_(b, m, ANY_ATOMIC_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // attributeRef '=' expression
  public static boolean attributeAssign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeAssign")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attributeRef(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_ASSIGN, r);
    return r;
  }

  /* ********************************************************** */
  // attributeAssign+
  public static boolean attributeAssignBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeAssignBody")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attributeAssign(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!attributeAssign(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attributeAssignBody", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, ATTRIBUTE_ASSIGN_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // attributeId attributeType attributeCategory
  public static boolean attributeBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeBody")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attributeId(b, l + 1);
    r = r && attributeType(b, l + 1);
    r = r && attributeCategory(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // category '=' ref
  public static boolean attributeCategory(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeCategory")) return false;
    if (!nextTokenIs(b, CATEGORY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CATEGORY, ASSIGN);
    r = r && ref(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_CATEGORY, r);
    return r;
  }

  /* ********************************************************** */
  // attribute attributeName '{' attributeBody '}'
  public static boolean attributeDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDeclaration")) return false;
    if (!nextTokenIs(b, ATTRIBUTE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_DECLARATION, null);
    r = consumeToken(b, ATTRIBUTE);
    r = r && attributeName(b, l + 1);
    r = r && consumeToken(b, CURVE1);
    p = r; // pin = 3
    r = r && report_error_(b, attributeBody(b, l + 1));
    r = p && consumeToken(b, CURVE2) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '[' attributeDesignatorMustBePresent? attributeDesignatorIssuer? ']'
  public static boolean attributeDesignator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDesignator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_DESIGNATOR, "<attribute designator>");
    r = consumeToken(b, "[");
    r = r && attributeDesignator_1(b, l + 1);
    r = r && attributeDesignator_2(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // attributeDesignatorMustBePresent?
  private static boolean attributeDesignator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDesignator_1")) return false;
    attributeDesignatorMustBePresent(b, l + 1);
    return true;
  }

  // attributeDesignatorIssuer?
  private static boolean attributeDesignator_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDesignator_2")) return false;
    attributeDesignatorIssuer(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // issuer '=' STRING_LITERAL
  public static boolean attributeDesignatorIssuer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDesignatorIssuer")) return false;
    if (!nextTokenIs(b, ISSUER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ISSUER, ASSIGN, STRING_LITERAL);
    exit_section_(b, m, ATTRIBUTE_DESIGNATOR_ISSUER, r);
    return r;
  }

  /* ********************************************************** */
  // musteepresent
  public static boolean attributeDesignatorMustBePresent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeDesignatorMustBePresent")) return false;
    if (!nextTokenIs(b, MUSTEEPRESENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MUSTEEPRESENT);
    exit_section_(b, m, ATTRIBUTE_DESIGNATOR_MUST_BE_PRESENT, r);
    return r;
  }

  /* ********************************************************** */
  // id '=' xacmlDeclaration
  public static boolean attributeId(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeId")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, ASSIGN);
    r = r && xacmlDeclaration(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_ID, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean attributeName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ATTRIBUTE_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // ref attributeDesignator?
  public static boolean attributeRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeRef")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ref(b, l + 1);
    r = r && attributeRef_1(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_REF, r);
    return r;
  }

  // attributeDesignator?
  private static boolean attributeRef_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeRef_1")) return false;
    attributeDesignator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // type '=' ref
  public static boolean attributeType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attributeType")) return false;
    if (!nextTokenIs(b, TYPE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TYPE, ASSIGN);
    r = r && ref(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // category categoryName '=' xacmlDeclaration
  public static boolean categoryDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "categoryDeclaration")) return false;
    if (!nextTokenIs(b, CATEGORY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATEGORY);
    r = r && categoryName(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && xacmlDeclaration(b, l + 1);
    exit_section_(b, m, CATEGORY_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean categoryName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "categoryName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CATEGORY_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // clauseOperator clauseExpression
  public static boolean clauseAddin(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseAddin")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = clauseOperator(b, l + 1);
    r = r && clauseExpression(b, l + 1);
    exit_section_(b, m, CLAUSE_ADDIN, r);
    return r;
  }

  /* ********************************************************** */
  // clause clauseExpression clauseAddin*
  public static boolean clauseEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseEntry")) return false;
    if (!nextTokenIs(b, CLAUSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CLAUSE);
    r = r && clauseExpression(b, l + 1);
    r = r && clauseEntry_2(b, l + 1);
    exit_section_(b, m, CLAUSE_ENTRY, r);
    return r;
  }

  // clauseAddin*
  private static boolean clauseEntry_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseEntry_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!clauseAddin(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "clauseEntry_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // singleClauseExpression | functionClause
  public static boolean clauseExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLAUSE_EXPRESSION, "<clause expression>");
    r = singleClauseExpression(b, l + 1);
    if (!r) r = functionClause(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // attributeRef | constant
  public static boolean clauseOperand(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseOperand")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLAUSE_OPERAND, "<clause operand>");
    r = attributeRef(b, l + 1);
    if (!r) r = constant(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean clauseOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clauseOperator")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLAUSE_OPERATOR, r);
    return r;
  }

  /* ********************************************************** */
  // apply ref
  public static boolean combinationAlgorithmRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "combinationAlgorithmRef")) return false;
    if (!nextTokenIs(b, APPLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, APPLY);
    r = r && ref(b, l + 1);
    exit_section_(b, m, COMBINATION_ALGORITHM_REF, r);
    return r;
  }

  /* ********************************************************** */
  // wrappedExpressions | expressions
  public static boolean conditionBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITION_BODY, "<condition body>");
    r = wrappedExpressions(b, l + 1);
    if (!r) r = expressions(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // condition conditionBody
  public static boolean conditionEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionEntry")) return false;
    if (!nextTokenIs(b, CONDITION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONDITION);
    r = r && conditionBody(b, l + 1);
    exit_section_(b, m, CONDITION_ENTRY, r);
    return r;
  }

  /* ********************************************************** */
  // integerLiteral|
  //     STRING_LITERAL
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = integerLiteral(b, l + 1);
    if (!r) r = consumeToken(b, STRING_LITERAL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // STRING_LITERAL
  public static boolean description(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "description")) return false;
    if (!nextTokenIs(b, STRING_LITERAL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING_LITERAL);
    exit_section_(b, m, DESCRIPTION, r);
    return r;
  }

  /* ********************************************************** */
  // permit|deny
  public static boolean effect(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "effect")) return false;
    if (!nextTokenIs(b, "<effect>", DENY, PERMIT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EFFECT, "<effect>");
    r = consumeToken(b, PERMIT);
    if (!r) r = consumeToken(b, DENY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // operand | wrappedExpressions
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    r = operand(b, l + 1);
    if (!r) r = wrappedExpressions(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // operator expression
  public static boolean expressionAddin(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expressionAddin")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_ADDIN, "<expression addin>");
    r = operator(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression expressionAddin*
  public static boolean expressions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expressions")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSIONS, "<expressions>");
    r = expression(b, l + 1);
    r = r && expressions_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // expressionAddin*
  private static boolean expressions_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expressions_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!expressionAddin(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expressions_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

